fixing issue for iframe, textImage subtitle spacing

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/iframe/_iframe.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/iframe/_iframe.scss
@@ -1,11 +1,9 @@
-.pw-frame {
-    display: block;
-    width: 100%;
-    height: 100vh;
-}
 .pw-container.pw-frame iframe {
     @include margin(0 $margin-md);
     @include padding(0 $padding-md);
+    display: block;
+    width: 100%;
+    height: 100vh;
     @media #{$desktop} {
         @include margin(0 $margin-xxxl);
         @include padding(0 $padding-xxxl);
