--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/textImage/_textImage.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/textImage/_textImage.scss
@@ -2,7 +2,6 @@
     @include border-radius($border-radius);
     @include padding($padding-md);
     @include margin(0 $margin-md);
-
     @media #{$desktop} {
         @include padding($padding-xxxl);
         @include margin(0 $margin-xxxl);
@@ -65,7 +64,7 @@
     }
 
     &__subTitle {
-        @include margin-top($margin-l);
+        @include margin-top($margin-md);
         @include margin-bottom($margin-xss);
         color: $color-boulder;
         text-transform: $uppercase;
